# sketch2cad

./: .env.example  .gitignore  LICENSE  README.md  init_repo.sh  pyproject.toml
scripts/: update_goldens.py
src/sketch2cad/: cli.py  contours.py  export_dxf.py  metrics.py  models.py  pipeline.py  preprocess.py  scale_reference.py  vectorize_potrace.py  watchdog_service.py
systemd/: sketch2cad.service
tests/: test_e2e_golden.py  test_export_dxf.py  test_golden_fixtures.py  test_preprocess.py  test_scale.py
tests/fixtures/holes_multi/: golden_metrics.json  golden_out.dxf.report.json  meta.json
tests/fixtures/holes_nested/: golden_metrics.json  golden_out.dxf.report.json  meta.json
tests/fixtures/holes_touching_border/: golden_metrics.json  golden_out.dxf.report.json  meta.json
tests/fixtures/noisy_shadow/: golden_metrics.json  golden_out.dxf.report.json  meta.json
tests/fixtures/simple_rect/: golden_metrics.json  golden_out.dxf.report.json  meta.json
tests/fixtures/thin_lines/: golden_metrics.json  golden_out.dxf.report.json  meta.json
