[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sketch2cad"
version = "0.1.0"
description = "Sketch image (Samsung Flip/photo) -> DXF (and optional STEP) pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "sketch2cad contributors" }]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "ezdxf>=1.3",
  "typer>=0.12",
  "watchdog>=4.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

# For robust SVG path parsing from potrace output
svg = [
  "svgpathtools>=1.6",
]

# Heavy optional AI stack; keep disabled by default
sam = [
  "torch",
  "torchvision",
  "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]

# Optional 3D / STEP
cad = [
  "cadquery",
]

[project.scripts]
sketch2cad = "sketch2cad.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
